--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,43 +1,20 @@
 trigger:
-- main  # Adjust to your branch name
+- main
 
 pool:
-  name: AzureVM  # Replace with your self-hosted agent pool name
-
-variables:
-  pythonVersion: '3.13'  # Specify the Python version
+  name: 'AzureVM'  # Replace 'Default' with your self-hosted agent pool name
 
 steps:
-# Step 1: Checkout the code
-- task: Checkout@1
-  displayName: 'Checkout code'
-
-# Step 2: Set up Python
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: $(pythonVersion)
-    addToPath: true  # Adds Python to PATH
-  displayName: 'Set up Python'
+    versionSpec: '3.13'
+    addToPath: true
 
-# Step 3: Install dependencies
 - script: |
     python -m pip install --upgrade pip
     pip install -r requirements.txt
   displayName: 'Install dependencies'
 
-# Step 4: Start the Flask application in the foreground
 - script: |
-    python app.py &
-    echo "Flask app started."
-  displayName: 'Start Flask App'
-
-# Step 5: Wait for the Flask app to become responsive
-- script: |
-    echo "Waiting for Flask app to start..."
-    sleep 10  # Adjust wait time if necessary
-  displayName: 'Wait for Flask app to start'
-
-# Step 6: Verify the application is running
-- script: |
-    curl http://127.0.0.1:5000 || echo "Flask app did not start successfully."
-  displayName: 'Verify Flask App'
+    python app.py
+  displayName: 'Run Flask app'
