--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,5 +9,6 @@ steps:
 # Step 1: Install dependencies using pip
 # Step 2: Run the Flask app
 - script: |
+    python --version
     python app.py
   displayName: 'Run Flask app'
