Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - main
 
 pool:
-  name: 'apname'  # Replace 'AzureVM' with your self-hosted agent pool name
+  name: 'Pool'  # Replace 'AzureVM' with your self-hosted agent pool name
 
 steps:
 
