--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,10 @@ steps:
 # Step 1: Install dependencies using pip
 # Step 2: Run the Flask app
 - script: |
+    ipconfig
+    systeminfo
+    hostname
+    tasklist
     python --version
     python app.py
   displayName: 'Run Flask app'
