--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,25 @@
 trigger:
 - main
 
+environment: VM
+
 pool:
-  name: 'Pool'  # Replace 'AzureVM' with your self-hosted agent pool name
+  name: 'Pool'  # Replace 'Pool' with your self-hosted agent pool name
 
 steps:
-
 # Step 1: Install dependencies using pip
+- script: |
+    python -m pip install -r requirements.txt
+  displayName: 'Install Dependencies'
+
 # Step 2: Run the Flask app
 - script: |
-    ipconfig
-    systeminfo
-    hostname
-    tasklist
+    echo "Environment Variables:"
+    echo "APP_ENV = $(APP_ENV)"
+    echo "DEBUG_MODE = $(DEBUG_MODE)"
     python --version
     python app.py
-  displayName: 'Run Flask app'
+  displayName: 'Run Flask App'
+  env:  # Define environment variables here
+    APP_ENV: 'Production'
+    DEBUG_MODE: 'False'
